Fixed button hold release on mobile

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -6,6 +6,10 @@
   font-size: var(--font-size-l);
   padding: var(--gap-5);
   text-align: center;
+  touch-action: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
   width: 100%;
 }
 
